tests/neg/undef_flow.ovt
sensor s : rate(int, (10, 0));
actuator a : rate(int, (10, 0));
node f {c: clock} (i : rate(int, c)) returns (o : rate(int, c))
  var unused : rate(int, c);
let
  o = i;
tel
a = f(s);
